@@ -26,7 +26,7 @@
   <drivers>
     <driver>
       <id>Postscript-Samsung</id>
-      <ppd>PPD/Samsung/Samsung_C48x_Series.ppd</ppd>
+      <ppd>PPD/Samsung/PS/Samsung_C48x_Series.ppd</ppd>
     </driver>
   </drivers>
   <comments>
