@@ -3,7 +3,7 @@
   <model>M403x</model>
   <mechanism>
     <laser />
-    <!--not "color"-->  
+    <!--not "color"-->
     <resolution>
       <dpi>
         <x>600</x>
@@ -27,7 +27,7 @@
   <drivers>
     <driver>
       <id>Postscript-Samsung</id>
-      <ppd>PPD/Samsung/Samsung_M403x_Series.ppd</ppd>
+      <ppd>PPD/Samsung/PS/Samsung_M403x_Series.ppd</ppd>
     </driver>
   </drivers>
   <comments>
