@@ -27,7 +27,7 @@
   <drivers>
     <driver>
       <id>Postscript-Samsung</id>
-      <ppd>PPD/Samsung/Samsung_M408x_Series.ppd</ppd>
+      <ppd>PPD/Samsung/PS/Samsung_M408x_Series.ppd</ppd>
     </driver>
   </drivers>
   <comments>
