@@ -1,3 +1,10 @@
+2015-08-17  Laxmeesh Markod <m.laxmeesh@samsung.com>
+        * db/source/printer/Samsung-M403x.xml,
+          db/source/printer/Samsung-M408x.xml,
+          db/source/printer/Samsung-C268x.xml,
+          db/source/printer/Samsung-C48x.xml:
+          Fixed PPD path in xml files
+
 2015-07-29  Laxmeesh Markod <m.laxmeesh@samsung.com>
 	* db/source/PPD/Samsung/PS/Samsung_M403x_Series.ppd,
 	  db/source/PPD/Samsung/PS/Samsung_M408x_Series.ppd,
